[tool.poetry]
name = "json-utils"
version = "0.0.0"
description = ""
authors = ["Idar Bergli <idar.bergli@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = { version = "^1", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
flake8 = "^3.8.3"
black = "^19.10b0"
pytest-cov = "^2.10.0"
coverage = "^5.2"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^1.32.0"
isort = "^5.0.6"

[tool.poetry.scripts]

[tool.coverage.paths]
source = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["starlette_aad"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
